--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "food order",
   "main": "index.js",
   "scripts": {
+    "node": "nodemon server.js",
+    "pm2node": "pm2 start server.js",
     "dev": "webpack-dev-server",
     "start": "webpack -d --watch"
   },
@@ -40,15 +42,19 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "express": "^4.15.4",
+    "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "request": "^2.81.0"
   }
 }
